infrastructure/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bhs
  labels:
    app.kubernetes.io/name: behavioral-health-system
    environment: dev
